# ezview

./: .gitignore  CMakeLists.txt  Makefile  README.md  ezview.c  kitty.ppm  ppmrw.c  ppmrw.h  test_ascii.ppm  test_raw.ppm
